--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ env:
   - secure: S5mBw/tl0lQwNfeFUG3NNSWI6VLlZ7sYscsLjcaBOdd+2FusGdMt5rC4/hXoWneI3E74zYmPyrvhcFNWDdJxt3rAAD3YNdoWUe3LnU4uegG1toiIisl20e9tYy8J4QUbQeBsyBl10R5XqZ6GxQE3LHw9wVuaZEoEDbUs3TCH1eo=
   - secure: EHjKGzsEYYqAiOUgtxBGmtsEH2BhGnTblv64lrF0opmSqVX42HBlNouiB5NiyyhOd2QbN6lZtCnPzDSGTavBEU33D/mszrI+aoV16jwXIU0ivSyg3O8gEMezaRjWCPedg0XN1KHcI8D5OxLk0QJjlMPcqzHpxNBTGaXvKVewCUs=
   - secure: ZRdW1BSP1SnAcJPUJZzNBCo2Ja92Q4INYOlhFQu0BZ4H8ui65pVOZWSjzxj8QwUHx39Gwzqd4SoSAWQqjZwg4uJDfc0JnL85FggHDk85O1t4UiXCtCBYDUxyCPH2EzhDKl78bHDBkPhyywGdv7NzwWrbKh0uIueAG/JUF6YN4Tc=
+  - secure: dXAHpq959vSz5g7uxkdOgMhWsUGWCqzdIXen+muxw+1iCovx2rW8GHBKBGUw/vNlj+AxAwzfhdYH0rQ2+UT5jSEbIe9iKvlr8ARC5ViZ8dCeuUXGRcdmzKozc0xkxrgoH+eICHo5V7kPzsjtHW7MplU6QrSqI8B23+jAacKnCVk=
 dd:
   secure: CwT1vkU1P2ovp+/ejGlvGnSNdOtJFfdsMxmWZQkBpNq831e4PnS9R+JYk0K6zgLVZ+mmGhgnadUODqyz8RIW+1Q8HkTpoxFXSaWorEMTMuF6nvcje/vNqJdWSRQ2pADvENrUftb0N3vEOlCz91NKX71kVumaFLXtozVieuCSBR4=
